--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <a href="#aboutMe">About Me</a>
                 <a href="#projects">Projects</a>
-                <a href="">Contact</a>
+                <a href="#contact">Contact</a>
 
             </nav>
         </header>
